# prettypyplot

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  extra-requirements.txt  flake8-CI.cfg  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: pages.yml  pytest.yml  python-publish.yml
changelog/: index.html
cmaps/: index.html
contributing/: index.html
css/: extra.css
docs/: cmaps.md  colors.html  contributing.md  create_doc.sh  credits.mako  decorators.html  faq.md  gallery.html  gallery.md  gen_ref_nav.py  index.html  index.js  index.md  plot.html  style.html  subplots.html  text.html  texts.html  tools.html
docs/cmaps/: index.html
docs/config/: credits.mako  css.mako  head.mako  logo.mako
docs/css/: extra.css
docs/gallery/: cmaps.md  cmaps.py  colorbar.md  colorbar.py  gen_gallery.py  index.md  legend.md  legend.py  logo.md  logo.py  run.sh  test.py
faq/: index.html
gallery/: README.md  cmaps.py  colorbar.py  comparison_mpl.py  comparison_pplt.py  gen_gallery.py  index.html  legend.py  logo.py  logo_large.py  run.sh
gallery/cmaps/: README.md  cmaps.py  index.html
gallery/colorbar/: README.md  colorbar.py  index.html
gallery/legend/: README.md  index.html  legend.py
gallery/logo/: index.html
gallery/subplots/: README.md  subplots.py
license/: index.html
prettypyplot/: __init__.py  _latex.py  _tools.py  colors.py  decorators.py  gallery.py  plot.py  prettypyplot.py  style.py  subplots.py  text.py  texts.py  tools.py
prettypyplot/cmaps/: README.md  _macaw.py  (+3 more)
reference/: index.html
search/: search_index.json
test/: test_cmaps.py  test_colors.py  test_decorators.py  test_plot.py  test_style.py  test_subplots.py  test_texts.py  test_tools.py
tests/: pypi_test.py  test_cmaps.py  test_colors.py  test_pyplot.py  test_style.py  test_subplots.py  test_texts.py  test_tools.py
(+31 files in other folders)
